boilerplates/kubernetes/redis/redis-insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: redis-insight.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-svc
                port:
                  number: 80
